<resources>
    <string name="app_name">IPC</string>
    <string name="log">log:</string>
    <string name="open">打开新页面</string>
    <string name="send_integer">发送 Integer 事件(跨进程未打开)</string>
    <string name="send_string">发送 String 事件(forever也是sticky)</string>
    <string name="send_bean">发送 Bean 事件</string>
    <string name="reset_sticky">重置 sticky 事件</string>
    <string name="send_list">发送 list 事件</string>
    <string name="send_map">发送 map 事件</string>
    <string name="send_default">发送 默认方式 事件</string>
    <string name="send">发送</string>
    <string name="observe">注册Sticky</string>
    <string name="title_str">%d\n%s\n%s</string>
    <string name="observePriority1">注册优先级1</string>
    <string name="observeStickyPriority2">注册Sticky优先级2</string>
    <string name="observePriority3">注册优先级3</string>
    <string name="observePriorityF3">注册优先级-3</string>
    <string name="priority">优先级测试</string>
    <string name="observePriority2Forever">注册优先级2永久</string>
    <string name="removePriority2Forever">删除优先级2永久</string>
    <string name="removeOwner">删除当前所有观察</string>
</resources>
