<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="60dp"
        android:text="@string/priority"
        android:textColor="@color/colorPrimary"
        android:textSize="60sp" />

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send" />

    <Button
        android:id="@+id/observePriority1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/observePriority1" />

    <Button
        android:id="@+id/observeStickyPriority2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/observeStickyPriority2" />

    <Button
        android:id="@+id/observePriority3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/observePriority3" />

    <Button
        android:id="@+id/observePriorityF3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/observePriorityF3" />

    <Button
        android:id="@+id/observePriority2Forever"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/observePriority2Forever" />

    <Button
        android:id="@+id/removePriority2Forever"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/removePriority2Forever" />
    <Button
        android:id="@+id/removeOwner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/removeOwner" />

</LinearLayout>
