<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/log"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

    </ScrollView>

    <Button
        android:id="@+id/open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open" />

    <Button
        android:id="@+id/testInt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_integer" />

    <Button
        android:id="@+id/testString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_string" />

    <Button
        android:id="@+id/testBean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_bean" />

    <Button
        android:id="@+id/testList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_list" />

    <Button
        android:id="@+id/testResetSticky"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_sticky" />

    <Button
        android:id="@+id/testMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_map" />

    <Button
        android:id="@+id/testDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_default" />

</LinearLayout>
